fixed Header and footer overlapping other data

--- a/Styles.css
+++ b/Styles.css
@@ -1,10 +1,10 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    margin: 0;
     padding: 0;
     color: #333;
     background-color: #f4f4f4;
+    margin-bottom: 66px;
 }
 
 a {
@@ -16,9 +16,16 @@ a {
     background-color: #333;
     overflow: hidden;
     padding: 0.5rem;
+    text-align: center;
+    padding: 2px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 .navbar a {
+    font-size: 30px;
     float: left;
     display: block;
     color: #f4f4f4;
@@ -35,12 +42,11 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 10px;
+    padding: 2px;
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    margin: 0;
 }
 
 table {
@@ -53,6 +59,7 @@ th, td {
     padding: 12px;
     text-align: left;
     border-bottom: 1px solid #ddd;
+    margin-bottom: 10px;
 }
 
 th {
@@ -71,7 +78,6 @@ h1 {
 }
 
 ol {
-    margin: 0;
     padding: 0;
     list-style-type: none;
 }
